--- a/metron-platform/metron-elasticsearch/src/test/resources/log4j.properties
+++ b/metron-platform/metron-elasticsearch/src/test/resources/log4j.properties
@@ -14,10 +14,11 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+# Root logger option
+log4j.rootLogger=ERROR, stdout
 
-appender.console.type = Console
-appender.console.name = console
-appender.console.layout.type = PatternLayout
-
-rootLogger.level = debug
-rootLogger.appenderRef.console.ref = console
+# Direct log messages to stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
