Fixed integration tests

--- a/metron-analytics/metron-profiler/src/main/config/profiler.properties
+++ b/metron-analytics/metron-profiler/src/main/config/profiler.properties
@@ -58,7 +58,7 @@ profiler.max.routes.per.bolt=10000
 
 profiler.hbase.salt.divisor=1000
 profiler.hbase.table=profiler
-profiler.hbase.column.builder=VALUES_ONLY
+profiler.hbase.column.builder=VALUES_ONLY_WITH_CF
 profiler.hbase.column.family=P
 profiler.hbase.batch=10
 profiler.hbase.flush.interval.seconds=30
