The number of replicas/shards must be specified in the index template, not as a global setting

--- a/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/bro_index.template
+++ b/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/bro_index.template
@@ -1,5 +1,9 @@
 {
   "template": "bro_index*",
+  "settings": {
+    "number_of_replicas": {{index_number_of_replicas}},
+    "number_of_shards": {{index_number_of_shards}}
+  },
   "mappings": {
     "bro_doc": {
       "dynamic_templates": [
