--- a/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/error_index.template
+++ b/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/error_index.template
@@ -1,5 +1,9 @@
 {
   "template": "error_index*",
+  "settings": {
+    "number_of_replicas": {{index_number_of_replicas}},
+    "number_of_shards": {{index_number_of_shards}}
+  },
   "mappings": {
     "error_doc": {
       "properties": {
