--- a/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/scripts/dashboard/kibana.template
+++ b/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/scripts/dashboard/kibana.template
@@ -1,5 +1,9 @@
 {
   "template" : ".kibana",
+  "settings": {
+    "number_of_replicas": {{index_number_of_replicas}},
+    "number_of_shards": {{index_number_of_shards}}
+  },
     "mappings" : {
       "search" : {
         "dynamic" : "strict",
