Partially working version using SHC. Ugh.  Values inserted into HBase as nulls for some reason

--- a/metron-analytics/pom.xml
+++ b/metron-analytics/pom.xml
@@ -46,6 +46,7 @@
 		<module>metron-profiler</module>
 		<module>metron-profiler-client</module>
 		<module>metron-profiler-common</module>
+		<module>metron-profiler-spark</module>
     </modules>
 	<dependencies>
 		<dependency>
