--- a/metron-analytics/metron-profiler-spark/src/test/resources/log4j.properties
+++ b/metron-analytics/metron-profiler-spark/src/test/resources/log4j.properties
@@ -27,4 +27,5 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.logger.org.apache.metron.profiler=DEBUG
+log4j.logger.org.apache.metron.profiler=ERROR
+log4j.logger.org.apache.metron.profiler.spark=ERROR
