--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
         <global_reflections_version>0.9.10</global_reflections_version>
         <global_checkstyle_version>8.0</global_checkstyle_version>
         <global_log4j_core_version>2.1</global_log4j_core_version>
+        <global_spark_version>2.3.1</global_spark_version>
     </properties>
 
     <profiles>
