--- a/metron-platform/metron-hbase/src/test/resources/log4j.properties
+++ b/metron-platform/metron-hbase/src/test/resources/log4j.properties
@@ -27,7 +27,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-#log4j.logger.org.apache.phoenix=ALL
+log4j.logger.org.apache.phoenix=ALL
 log4j.logger.org.apache.metron.hbase=ALL
 #log4j.logger.org.apache.hadoop.hbase=ALL
 log4j.logger.org.springframework.jdbc.core=ALL
