--- a/metron-contrib/metron-performance/pom.xml
+++ b/metron-contrib/metron-performance/pom.xml
@@ -88,7 +88,7 @@
               <relocations>
                 <relocation>
                   <pattern>com.google.common</pattern>
-                  <shadedPattern>org.apache.metron.perf.guava</shadedPattern>
+                  <shadedPattern>org.apache.metron.metron-performance.guava</shadedPattern>
                 </relocation>
               </relocations>
               <transformers>
