--- a/metron-platform/elasticsearch-shaded/pom.xml
+++ b/metron-platform/elasticsearch-shaded/pom.xml
@@ -118,7 +118,7 @@
                                 <exclude>META-INF/*.RSA</exclude>
                               </excludes>
                             </filter>
-                          </filters>  
+                          </filters>
                           <relocations>
                                 <!-- The REST API has conflicts with these packages -->
                                 <relocation>
@@ -127,7 +127,7 @@
                                 </relocation>
                                 <relocation>
                                     <pattern>com.google.common</pattern>
-                                    <shadedPattern>org.apache.metron.guava.elasticsearch-shaded</shadedPattern>
+                                    <shadedPattern>org.apache.metron.elasticsearch-shaded.guava</shadedPattern>
                                 </relocation>
                             </relocations>
                             <artifactSet>
