--- a/metron-interface/metron-rest/src/main/config/rest_application.yml
+++ b/metron-interface/metron-rest/src/main/config/rest_application.yml
@@ -78,3 +78,10 @@ ldap:
     searchBase: ${METRON_LDAP_GROUP_SEARCHBASE}
     searchFilter: ${METRON_LDAP_GROUP_SEARCHFILTER}
     roleAttribute: ${METRON_LDAP_GROUP_ROLE}
+
+activeDirectory:
+  domain: ${METRON_AD_DOMAIN}
+  url: ${METRON_AD_URL}
+  convertSubErrorCodesToExceptions: true
+  useAuthenticationRequestCredentials: true
+  activeDirectoryContextEnvironmentProperties:
