--- a/metron-analytics/metron-profiler-client/pom.xml
+++ b/metron-analytics/metron-profiler-client/pom.xml
@@ -99,6 +99,7 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>${global_hbase_version}</version>
+            <scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.hadoop</groupId>
@@ -138,81 +139,6 @@
                   </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>${global_shade_version}</version>
-                <configuration>
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <artifactSet>
-                        <excludes>
-                            <exclude>*slf4j*</exclude>
-                        </excludes>
-                    </artifactSet>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                          <relocations>
-                              <relocation>
-                                  <pattern>com.google.common</pattern>
-                                  <shadedPattern>org.apache.metron.guava.${guava_version}</shadedPattern>
-                              </relocation>
-                          </relocations>
-                              <filters>
-                                <filter>
-                                  <artifact>*:*</artifact>
-                                  <excludes>
-                                    <exclude>META-INF/*.SF</exclude>
-                                    <exclude>META-INF/*.DSA</exclude>
-                                    <exclude>META-INF/*.RSA</exclude>
-                                  </excludes>
-                                </filter>
-                              </filters>
-                              <transformers>
-                                 <transformer
-                                    implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
-                                    <resources>
-                                      <resource>.yaml</resource>
-                                      <resource>LICENSE.txt</resource>
-                                      <resource>ASL2.0</resource>
-                                      <resource>NOTICE.txt</resource>
-                                    </resources>
-                                  </transformer>
-                                  <!-- UNCOMMENT THIS IF YOU NEED TO REGENERATE THE BEST GUESS NOTICES FILE WHICH REQUIRES PRUNING EVERY RELEASE -->
-                                  <!--transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
-                                    <addHeader>false</addHeader>
-                                    <projectName>${project.name}</projectName>
-                                  </transformer-->
-
-                                  <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                      <mainClass></mainClass>
-                                  </transformer>
-                              </transformers>
-                          </configuration>
-                      </execution>
-                  </executions>
-              </plugin>
-              <plugin>
-                  <artifactId>maven-assembly-plugin</artifactId>
-                  <configuration>
-                      <descriptor>src/main/assembly/assembly.xml</descriptor>
-                  </configuration>
-                  <executions>
-                      <execution>
-                          <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                          <phase>package</phase> <!-- bind to the packaging phase -->
-                          <goals>
-                              <goal>single</goal>
-                          </goals>
-                      </execution>
-                  </executions>
-              </plugin>
           </plugins>
           <resources>
               <resource>
