--- a/metron-deployment/ansible/roles/ambari_config/tasks/dependencies-CentOS-6.yml
+++ b/metron-deployment/ansible/roles/ambari_config/tasks/dependencies-CentOS-6.yml
@@ -15,15 +15,13 @@
 #  limitations under the License.
 #
 ---
-- name: Install python-requests with pip
+- name: Install urllib3 with pip
+  pip:
+    name: urllib3
+    version: 1.10.2
+
+- name: Install requests with pip
   pip:
     name: requests
-    version: 2.21.0
-  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == '6'
-
-- name: Install python-requests with yum
-  yum: name={{ item }}
-  with_items:
-      - python-urllib3
-      - python-requests
-  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == '7'
+    #version: 2.21.0
+    version: 2.6.1
