--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,6 @@
         <base_flux_version>1.0.1</base_flux_version>
         <base_kafka_version>0.10.0</base_kafka_version>
         <base_hadoop_version>2.7.1</base_hadoop_version>
-        <base_hbase_version>1.1.1</base_hbase_version>
         <base_flume_version>1.5.2</base_flume_version>
         <!-- full dependency versions -->
         <global_accumulo_version>1.8.0</global_accumulo_version>
@@ -106,7 +105,7 @@
         <global_pcap_version>1.7.1</global_pcap_version>
         <global_kafka_version>0.10.0.1</global_kafka_version>
         <global_hadoop_version>${base_hadoop_version}</global_hadoop_version>
-        <global_hbase_version>${base_hbase_version}</global_hbase_version>
+        <global_hbase_version>1.1.1</global_hbase_version>
         <global_flume_version>${base_flume_version}</global_flume_version>
         <global_elasticsearch_version>5.6.14</global_elasticsearch_version>
         <global_json_simple_version>1.1.1</global_json_simple_version>
@@ -139,8 +138,18 @@
         <global_jacoco_version>0.8.3</global_jacoco_version>
         <argLine></argLine>
     </properties>
-
     <profiles>
+        <profile>
+            <id>HDP-3.1.0.0</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <hdp_version>3.1.0.0</hdp_version>
+                <global_hbase_version>2.0.2</global_hbase_version>
+                <global_hbase_guava_version>17.0</global_hbase_guava_version>
+            </properties>
+        </profile>
         <profile>
             <id>HDP-2.5.0.0</id>
             <properties>
@@ -152,7 +161,6 @@
             </properties>
         </profile>
     </profiles>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
