--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ addons:
 env:
   - SCRIPT="mvn surefire:test@unit-tests -T 2C"
   - SCRIPT="mvn surefire:test@integration-tests"
+  - SCRIPT="mvn package -DskipTests -Pbuild-rpms"
+  - SCRIPT="mvn package -DskipTests -Pbuild-debs"
   - SCRIPT="mvn clean site --projects site-book"
   - SCRIPT="mvn test --projects metron-interface/metron-config,metron-interface/metron-alerts"
   - SCRIPT="./dev-utilities/build-utils/verify_licenses.sh"
