--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,9 @@ addons:
 
 env:
   - SCRIPT="mvn surefire:test@unit-tests -T 2C"
-  - SCRIPT="mvn surefire:test@integration-tests"
+#  - SCRIPT="mvn surefire:test@integration-tests"
+  - SCRIPT="mvn surefire:test@integration-tests -pl metron-platform/metron-parsing/metron-parsing-storm,metron-platform/metron-parsing/metron-parsers,metron-platform/metron-parsing/metron-parsers-common"
+  - SCRIPT="mvn surefire:test@integration-tests -pl metron-platform/metron-enrichment/metron-enrichment-common/,metron-platform/metron-enrichment/metron-enrichment-storm"
   - SCRIPT="mvn clean site --projects site-book"
   - SCRIPT="mvn test --projects metron-interface/metron-config,metron-interface/metron-alerts"
   - SCRIPT="./dev-utilities/build-utils/verify_licenses.sh"
