--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,6 @@ env:
   - SCRIPT="mvn surefire:test@unit-tests surefire:test@integration-tests -pl metron-platform/metron-enrichment/metron-enrichment-common/,metron-platform/metron-enrichment/metron-enrichment-storm"
   - SCRIPT="mvn surefire:test@unit-tests surefire:test@integration-tests -pl metron-stellar/stellar-zeppelin,metron-stellar/stellar-common,metron-stellar/stellar-3rd-party-example"
   - SCRIPT="mvn surefire:test@unit-tests surefire:test@integration-tests -pl $(find ./metron-analytics/ -type d -maxdepth 1 | paste -s -d, -)"
-  - SCRIPT="mvn surefire:test@integration-tests -pl "
   - SCRIPT="mvn clean site --projects site-book"
   - SCRIPT="mvn test --projects metron-interface/metron-config,metron-interface/metron-alerts"
   - SCRIPT="./dev-utilities/build-utils/verify_licenses.sh"
@@ -47,7 +46,21 @@ install:
   - time mvn install -T 2C -q -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script:
-  - time $SCRIPT
+#  - time $SCRIPT
+  - >
+    mvn surefire:test@unit-tests surefire:test@integration-tests -pl
+      metron-platform/metron-parsing/metron-parsers,
+      metron-platform/metron-parsing/metron-parsers-common,
+      metron-platform/metron-parsing/metron-parsing-storm
+  - >
+    mvn surefire:test@unit-tests surefire:test@integration-tests -pl
+      metron-platform/metron-enrichment/metron-enrichment-common/,
+      metron-platform/metron-enrichment/metron-enrichment-storm
+  - >
+    mvn surefire:test@unit-tests surefire:test@integration-tests -pl
+        metron-stellar/stellar-common,
+        metron-stellar/stellar-zeppelin,
+        metron-stellar/stellar-3rd-party-example
 
 matrix:
   fast_finish: true
